<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:product="http://schemas.android.com/tools">
    <data>
        <variable
            name="list"
            type="java.util.ArrayList&lt;com.marslan.stocktracking.services.model.Product&gt;" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            layout="@layout/base_toolbar"/>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/productRefresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/itemViewProductName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/name"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/itemViewProductPrice"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/price"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/itemViewProductCount"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/count"/>

                    <View
                        android:layout_width="72dp"
                        android:layout_height="1dp"/>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_marginHorizontal="30dp"
                    android:background="@color/grey"/>

                <com.marslan.stocktracking.ui.product.component.ProductRecyclerView
                    android:id="@+id/productRV"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    product:loadData="@{list}" />

            </LinearLayout>

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    </LinearLayout>

</layout>