<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="color"
            type="Integer" />
        <variable
            name="itemColor"
            type="Integer" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <View
            android:id="@+id/viewBackground"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            tools:background="@color/color_secondary_dark"
            android:background="@{color}"
            app:layout_constraintBottom_toBottomOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/bottomItemText1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="w,1:3"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/menu_home"
            app:layout_constraintStart_toStartOf="@id/bottomItemIcon1"
            app:layout_constraintEnd_toEndOf="@id/bottomItemIcon1"
            app:layout_constraintBottom_toBottomOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/bottomItemIcon1"
            android:layout_width="70dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/bottomItemIcon2"
            app:layout_constraintBottom_toTopOf="@id/bottomItemText1"
            android:background="@drawable/circle"
            android:backgroundTint="@{color}"
            android:tint="@{itemColor}"
            tools:tint="@color/white"
            android:padding="20dp"
            android:src="@drawable/ic_home" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/bottomItemText2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="gone"
            app:layout_constraintDimensionRatio="w,1:3"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/menu_invoice"
            app:layout_constraintStart_toStartOf="@id/bottomItemIcon2"
            app:layout_constraintEnd_toEndOf="@id/bottomItemIcon2"
            app:layout_constraintBottom_toBottomOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/bottomItemIcon2"
            android:layout_width="70dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toEndOf="@id/bottomItemIcon1"
            app:layout_constraintEnd_toStartOf="@id/bottomItemIcon3"
            app:layout_constraintBottom_toTopOf="@id/bottomItemText2"
            android:background="@drawable/circle"
            android:backgroundTint="@{color}"
            android:tint="@{itemColor}"
            tools:tint="@color/white"
            android:padding="20dp"
            android:src="@drawable/ic_invoice" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/bottomItemText3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="gone"
            app:layout_constraintDimensionRatio="w,1:3"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/menu_customer"
            app:layout_constraintStart_toStartOf="@id/bottomItemIcon3"
            app:layout_constraintEnd_toEndOf="@id/bottomItemIcon3"
            app:layout_constraintBottom_toBottomOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/bottomItemIcon3"
            android:layout_width="70dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@id/bottomItemIcon4"
            app:layout_constraintStart_toEndOf="@id/bottomItemIcon2"
            app:layout_constraintBottom_toTopOf="@id/bottomItemText3"
            android:background="@drawable/circle"
            android:backgroundTint="@{color}"
            android:tint="@{itemColor}"
            tools:tint="@color/white"
            android:padding="20dp"
            android:src="@drawable/ic_customer" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/bottomItemText4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="gone"
            app:layout_constraintDimensionRatio="w,1:3"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/menu_product"
            app:layout_constraintStart_toStartOf="@id/bottomItemIcon4"
            app:layout_constraintEnd_toEndOf="@id/bottomItemIcon4"
            app:layout_constraintBottom_toBottomOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/bottomItemIcon4"
            android:layout_width="70dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/bottomItemIcon3"
            app:layout_constraintBottom_toTopOf="@id/bottomItemText4"
            android:background="@drawable/circle"
            android:backgroundTint="@{color}"
            android:tint="@{itemColor}"
            tools:tint="@color/white"
            android:padding="20dp"
            android:src="@drawable/ic_product" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>