<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.view.MainActivity">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/container"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottom_nav"
        android:layout_alignParentTop="true"
        app:defaultNavHost="true" />

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_above="@id/bottom_nav"
        android:background="@drawable/shadow_top" />

    <LinearLayout
        android:id="@+id/bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/LL0"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/IV0"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="13dp"
                android:src="@drawable/ic_home"
                android:tint="@color/color_primary" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/TV0"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/menu_home"
                android:textColor="@color/color_primary"
                android:textSize="11sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/LL1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/IV1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="13dp"
                android:src="@drawable/ic_invoice"
                android:tint="@color/grey_text" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/TV1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/menu_order"
                android:textColor="@color/grey_text"
                android:textSize="11sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/LL2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/IV2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="13dp"
                android:src="@drawable/ic_product"
                android:tint="@color/grey_text" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/TV2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/menu_product"
                android:textColor="@color/grey_text"
                android:textSize="11sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/LL3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/IV3"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="13dp"
                android:src="@drawable/ic_customer"
                android:tint="@color/grey_text" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/TV3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/menu_customer"
                android:textColor="@color/grey_text"
                android:textSize="11sp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>